Tweak payment autofill disabled message in form-not-secure

When the "Payment not secure" message is shown, the item below it should
be "Payment autofilling disabled" instead of the "Automatic credit card
filling is disabled..." message, and it should use the normal font
rather than the warning font.

This CL adds a new string and uses it for this warning
message when the form-not-secure experiment is enabled. See
https://bugs.chromium.org/p/chromium/issues/detail?id=672666#c2 for a
screenshot.

The new warning message is styled the same as the existing warning messge.
To match the form-not-secure mocks, for simplicity, I've removed the warning
font list and uses the normal font for the warning message, whether it is the
original or new wording.

BUG=672666

Review-Url: https://codereview.chromium.org/2576143002
Cr-Commit-Position: refs/heads/master@{#438931}

Former-commit-id: f871c1f29a63064081b6f65300d6a1262d4ad0d2